feat: 完善沙箱功能