@@ -1,10 +1,9 @@
-package com.example.ojcodesandbox.unsafe;
+package com.l0v3ch4n.ojcodesandbox.unsafe;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -16,7 +15,7 @@ public class WriteFileError {
         String userDir = System.getProperty("user.dir");
         String filePath = userDir + File.separator + "src/main/resources/木马程序.bat";
         String errorProgram = "java -version 2>&1";
-        Files.write(Paths.get(filePath), Arrays.asList(errorProgram));
+        Files.write(Paths.get(filePath), List.of(errorProgram));
         System.out.println("写木马成功，你完了哈哈");
     }
 }
